# lmbatbot

./: .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  devenv.nix  entrypoint.sh  main.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: deploy.yaml  template_sync.yaml  test.yaml
data/static/: events.json  lt_content.txt  stickers.json
lmbatbot/: database.py  fun.py  models.py  tags.py  university_data.py  word_counter.py
migrations/: script.py.mako
migrations/versions/: 20241227_2250_f0f76bb9b563.py  20241228_1848_f105b088a0a3.py  20260517_2204_db3eb7114519.py
src/lmbatbot/: __init__.py  database.py  events.py  legacy_database.py  main.py  models.py  settings.py  tags.py  university_data.py  utils.py  word_counter.py
src/lmbatbot/database/: __init__.py  models.py  types.py
src/lmbatbot/migrations/: env.py
src/lmbatbot/migrations/versions/: 20241228_1848_f105b088a0a3.py  f0f76bb9b563_first_commit.py
tests/: conftest.py  test_tags.py
