[project]
name = "lmbatbot"
version = "0.1.5"
description = "A simple utility Bot with some fun commands"
readme = "README.md"
authors = [
    { name = "Lorenzo Bevilacqua", email = "43483037+ardubev16@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.5",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
    "python-telegram-bot==22.5",
    "sqlalchemy==2.0.43",
]

[dependency-groups]
dev = ["ruff==0.14.0", "vulture==2.14"]

[project.scripts]
lmbatbot = "lmbatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportUnknownVariableType = false


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN204", # Missing type annotation for special method
    "D1",     # Missing docstring in public: module, class, method, function, package, magic method, nested class, init
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "DTZ",    # No Naive Datetime
    "FIX",    # Line contains FIXME, TODO, XXX, HACK, consider resolving the issue
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TD002",  # Checks that a TODO comment includes an author.
    "TRY400", # Use logging.exception() instead of logging.error() for logging exceptions
    "S101",   # Checks for uses of the assert keyword.
]

[tool.ruff.lint.per-file-ignores]
"./src/lmbatbot/migrations/versions/*" = ["D400", "D415"]
