[project]
name = "lmbatbot"
dynamic = ["version"]
description = "A simple utility Bot with some fun commands"
readme = "README.md"
authors = [
    { name = "Lorenzo Bevilacqua", email = "43483037+ardubev16@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-telegram-bot==22.7",
    "sqlalchemy==2.0.49",
]

[dependency-groups]
dev = [
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "ruff==0.15.13",
    "ty>=0.0.37",
    "vulture==2.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
lmbatbot = "lmbatbot:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportUnknownVariableType = false


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN204", # Missing type annotation for special method
    "D1",     # Missing docstring in public: module, class, method, function, package, magic method, nested class, init
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "DTZ",    # No Naive Datetime
    "FIX",    # Line contains FIXME, TODO, XXX, HACK, consider resolving the issue
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TD002",  # Checks that a TODO comment includes an author.
    "TRY400", # Use logging.exception() instead of logging.error() for logging exceptions
    "S101",   # Checks for uses of the assert keyword.
]

[tool.ruff.lint.per-file-ignores]
"./src/lmbatbot/migrations/versions/*" = ["D400", "D415"]
"tests/**" = ["ANN", "PLR0913"]

[tool.alembic]
script_location = "%(here)s/migrations"

# See https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file for all available tokens
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff-format"
type = "exec"
executable = "%(here)s/.venv/bin/ruff"
options = "format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff-lint"
type = "exec"
executable = "%(here)s/.venv/bin/ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
